PROJECT(ObjBrowser)

INCLUDE(${QT_USE_FILE})

SET(OB_INCLUDE_FILES
  OB_Browser.h
  OB_Filter.h
  OB.h)

SET(OB_MOC_SOURCES OB_Browser.h )

SET(OB_SOURCE_FILES
  OB_Browser.cxx
  OB_Filter.cxx)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../Qtx)

ADD_DEFINITIONS( -DOB_EXPORTS )

QT4_WRAP_CPP(MOC_BUILT_SOURCES ${OB_MOC_SOURCES})

ADD_LIBRARY(objbrowser SHARED
  ${OB_SOURCE_FILES}
  ${MOC_BUILT_SOURCES} )

ADD_DEPENDENCIES(objbrowser qtx)

TARGET_LINK_LIBRARIES(objbrowser qtx)

INSTALL(TARGETS objbrowser
  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${OB_INCLUDE_FILES}
  DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
